--- a/res/layout/activity_solutions.xml
+++ b/res/layout/activity_solutions.xml
@@ -9,20 +9,21 @@
 
     <TextView
         android:id="@+id/teacherSolTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="100dp"
+        android:layout_marginLeft="100dp"
         android:text="Teachers Solutions"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/teacherSol_1Btn"
-        android:layout_width=""
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/teacherSolTextView"
-        android:layout_marginRight="40dp"
         android:layout_weight="0.5"
         app:layout_constraintEnd_toStartOf="@+id/votesteachersol_1Btn"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,15 +32,88 @@
 
     <TextView
         android:id="@+id/votesteachersol_1Btn"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/_100"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toStartOf="@+id/imageView1"
+        app:layout_constraintStart_toEndOf="@+id/teacherSol_1Btn"
+        app:layout_constraintTop_toBottomOf="@+id/teacherSolTextView" />
+
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="0dp"
+        android:layout_height="36dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/teacherSolTextView"
+        app:srcCompat="@android:drawable/presence_online" />
+    <Button
+        android:id="@+id/teacherSol_2Btn"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.5"
+        app:layout_constraintEnd_toStartOf="@+id/votesteachersol_2Btn"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/teacherSol_1Btn"
+        tools:text="Solution 1" />
+
+    <TextView
+        android:id="@+id/votesteachersol_2Btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="4dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/_100"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toStartOf="@+id/imageView2"
+        app:layout_constraintStart_toEndOf="@+id/teacherSol_2Btn"
+        app:layout_constraintTop_toBottomOf="@+id/votesteachersol_1Btn" />
 
-        android:layout_marginRight="4dp"
-        android:layout_toRightOf="@id/teacherSol_1Btn"
-        android:text="TextView"
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="0dp"
+        android:layout_height="36dp"
+        android:layout_marginTop="12dp"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:layout_editor_absoluteY="39dp" />
+        app:layout_constraintLeft_toRightOf="@id/votesteachersol_2Btn"
+        app:layout_constraintTop_toBottomOf="@id/imageView1"
+        app:srcCompat="@android:drawable/presence_online" />
+
+    <Button
+        android:id="@+id/teacherSol_3Btn"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.5"
+        app:layout_constraintEnd_toStartOf="@+id/votesteachersol_3Btn"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/teacherSol_2Btn"
+        tools:text="Solution 1" />
+
+    <TextView
+        android:id="@+id/votesteachersol_3Btn"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/_100"
+        android:textSize="24dp"
+        app:layout_constraintEnd_toStartOf="@+id/imageView3"
+        app:layout_constraintStart_toEndOf="@+id/teacherSol_3Btn"
+        app:layout_constraintTop_toBottomOf="@+id/votesteachersol_2Btn"
+
+        tools:layout_editor_absoluteX="326dp" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="0dp"
+        android:layout_height="36dp"
+        android:layout_marginTop="12dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/votesteachersol_3Btn"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:srcCompat="@android:drawable/presence_online" />
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
