--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -95,6 +95,15 @@
         app:layout_constraintTop_toBottomOf="@+id/createAccountBtn"
         app:layout_constraintVertical_bias="0.0" />
 
+    <CheckBox
+        android:id="@+id/loginStateBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Stay logged in"
+        app:layout_constraintBottom_toTopOf="@+id/signInBtn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/password" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
