Nu kan man see vilka uppgifter som finns, see de existerande lösningarna, up och downvota en lösning, ta bort en lösning (men bara om du är admin, Teacher eller du som la upp lösningen

--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -6,6 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".Homepage">
 
+    <include
+        layout= "@layout/activity_menu"></include>
     <Button
         android:id="@+id/mathBtn"
         android:layout_width="wrap_content"
