--- a/app/src/main/res/layout/activity_upload_solution.xml
+++ b/app/src/main/res/layout/activity_upload_solution.xml
@@ -80,7 +80,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name"
+        android:hint="Name of Solution"
         app:layout_constraintBottom_toTopOf="@+id/commentToSolutionText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
