--- a/app/src/main/res/layout/activity_change_profile_pic.xml
+++ b/app/src/main/res/layout/activity_change_profile_pic.xml
@@ -6,6 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".ChangeProfilePic">
 
+    <include
+        layout= "@layout/activity_menu"></include>
     <ImageButton
     android:id="@+id/cameraBtn"
     android:layout_width="124dp"
