--- a/app/src/main/res/layout/activity_forgot.xml
+++ b/app/src/main/res/layout/activity_forgot.xml
@@ -6,6 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".Forgot">
 
+    <include
+        layout= "@layout/activity_menu"></include>
     <EditText
         android:id="@+id/EmailET"
         android:layout_width="wrap_content"
