--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,10 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-
-
-
-
+    <include layout="@layout/activity_menu" />
     <EditText
         android:id="@+id/userNameLogin"
         android:layout_width="wrap_content"
@@ -65,6 +62,7 @@
 
     <Button
         android:id="@+id/signInBtn"
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -103,50 +101,13 @@
         android:id="@+id/loginStateBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Stay logged in"
+        android:text="@string/stay_logged_in"
         app:layout_constraintBottom_toTopOf="@+id/signInBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password" />
 
-    <androidx.drawerlayout.widget.DrawerLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/drawer"
-        android:layout_gravity="end"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".Menu"
-        tools:openDrawer="end">
 
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/c1" />
-
-
-        </RelativeLayout>
-
-        <com.google.android.material.navigation.NavigationView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/navigationView"
-            app:menu="@menu/menu_item"
-            app:headerLayout="@layout/header"
-            android:background="@color/c2"
-            android:layout_gravity="start"
-            app:itemTextColor="#FFF"/>
-
-
-    </androidx.drawerlayout.widget.DrawerLayout>
 
 
 
