--- a/app/src/main/res/layout/activity_seesolutions.xml
+++ b/app/src/main/res/layout/activity_seesolutions.xml
@@ -7,12 +7,14 @@
     android:layout_height="match_parent"
     tools:context=".SeeSolutions">
 
+    <include
+        layout= "@layout/activity_menu"></include>
 
     <TextView
         android:id="@+id/teacherSolutions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="60dp"
         android:text="Teacher Solutions"
         android:textAllCaps="true"
         android:textColor="@android:color/holo_green_dark"
