--- a/app/src/main/res/layout/activity_view_solution.xml
+++ b/app/src/main/res/layout/activity_view_solution.xml
@@ -6,16 +6,20 @@
     android:layout_height="match_parent"
     tools:context=".ViewSolution">
 
+
+    <include
+        layout= "@layout/activity_menu"></include>
+
     <ImageView
         android:id="@+id/solutionImage"
         android:layout_width="413dp"
         android:layout_height="481dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.064"
-        />
+        app:layout_constraintVertical_bias="0.228" />
 
     <Button
         android:id="@+id/upvoteBtn"
